force-app/main/default/objects/ServiceAppointment/fields/Preferred_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Date_2__c</fullName>
    <label>Preferred Date 2</label>
    <description>Customer's second preferred installation date</description>
    <type>Date</type>
</CustomField>