force-app/main/default/objects/ServiceAppointment/fields/Preferred_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Date_3__c</fullName>
    <label>Preferred Date 3</label>
    <description>Customer's third preferred installation date</description>
    <type>Date</type>
</CustomField>