force-app/main/default/objects/ServiceAppointment/fields/Preferred_Time_3__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Time_3__c</fullName>
    <label>Preferred Time 3</label>
    <description>Time of day for third preference (Morning, Afternoon, or Evening)</description>
    <type>Text</type>
    <length>20</length>
</CustomField>